--- a/dotHackFragmentLobbyServer/dotHackFragmentLobbyServer.csproj
+++ b/dotHackFragmentLobbyServer/dotHackFragmentLobbyServer.csproj
@@ -66,7 +66,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AreaServer.cs" />
+    <Compile Include="Classes\ApplicationSettings.cs" />
+    <Compile Include="Classes\AreaServer.cs" />
     <Compile Include="frm_Main.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -79,8 +80,8 @@
     <Compile Include="frm_Settings.Designer.cs">
       <DependentUpon>frm_Settings.cs</DependentUpon>
     </Compile>
-    <Compile Include="GameClients.cs" />
-    <Compile Include="LobbyServer.cs" />
+    <Compile Include="Classes\GameClients.cs" />
+    <Compile Include="Classes\LobbyServer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
