--- a/dotHackFragmentLobbyServer/Properties/Settings.settings
+++ b/dotHackFragmentLobbyServer/Properties/Settings.settings
@@ -23,5 +23,8 @@
     <Setting Name="PassWord" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="pingDelay" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
